# vision

./: .gitignore  README.md  project.clj  vision.org
resources/examples/: bounding_box.clj  camshift.clj  detect_motion.clj  display_webcam.clj  face_detect.clj  optical_flow.clj  robocup_id.clj  segmentation.clj  shape_match.clj  surf.clj  template_match.clj  window_listener.clj
resources/lib/: CMakeLists.txt  calibrate_cam.c  vision.c
src/vision/: core.clj  graphics.clj  mjpeg.clj  util.clj
